Add Google Oauth2 login.

--- a/app/src/main/res/values-mk/strings.xml
+++ b/app/src/main/res/values-mk/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="default_web_client_id">647284211208-nqocfks6lvciat24lbn084khsjprt70j.apps.googleusercontent.com</string>
     <string name="app_name">Weathero</string>
     <string name="welcome_to">Добредојде во</string>
     <string name="access_your_weather_info">Добиј метео инфо</string>
