--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,12 @@
     <string name="login_successfully">Login successful</string>
     <string name="login_unsuccessfully">Login unsuccessful</string>
     <string name="anonymous_login_failed">Unsuccessful anonymous login</string>
-
+    <string name="google_cache_cleared">Google cache cleared</string>
+    <string name="firebase_auth_wgoogle">Authentication with Google Firebase</string>
+    <string name="authentication_email">Email authentication:</string>
+    <string name="authentication_idtoken">ID token authentication</string>
+    <string name="google_login_failed">Google login failed with code:</string>
+    <string name="login_canceled">Login was cancelled by user</string>
+    <string name="login_inprogress">Login is in progress</string>
+    <string name="check_your_internet">Check your internet connection</string>
 </resources>
